@@ -1,3 +1,7 @@
+## UNRELEASED
+### 2.*.*
+* Drop old hiera file locations
+
 ## 2022-09-12
 ### 2.3.4
 * Add fix for new hiera file location and change in realm name
